Change divs to buttons for better semantic meaning

--- a/index.html
+++ b/index.html
@@ -3,35 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
     <link rel="manifest" href="images/favicon/site.webmanifest" />
+
+    <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@400;900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- ANIMATION -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <!-- CUSTOM STYLES -->
     <link rel="stylesheet" href="styles.css" />
     <title>Tic Tac Toe</title>
   </head>
   <body>
     <!-- 
-      overlay for game setting
-      - tic tac toe (message)
-      - mode selection ( ai or human)
-      - player1 name (optional)
-      - if player 2 mode is selected, pop up enter player 2 name (optional)
+      - if player 2 mode is selected, pop up enter player 2 
       - Select marker X or O, (if player 2 is selected, specify player 1, select marker)
       - button start, animate up
      -->
-    <div class="overlay" id="settings">
+    <div class="overlay" id="mainMenu">
       <section class="menu">
         <h1>Tic Tac Toe</h1>
         <h2>Game Modes:</h2>
         <div class="modes">
-          <buton id="ai" class="mode">A.I.</buton>
-          <div id="player2Mode" class="mode">Player 2</div>
+          <button id="ai" class="mode">A.I.</button>
+          <button id="player2Mode" class="mode">Human</button>
         </div>
         <div class="usernames">
           <input
@@ -51,21 +59,19 @@
         </div>
         <h2>Choose Marker:</h2>
         <div class="markers">
-          <buton id="x" class="mark">
+          <button id="x" class="mark">
             <img src="images/002-x.svg" alt="x" />
-          </buton>
-          <buton id="o" class="mark"><img src="images/001-o.svg" alt="o" /></buton>
+          </button>
+          <button id="o" class="mark"><img src="images/001-o.svg" alt="o" /></button>
         </div>
         <button class="start">START</button>
       </section>
     </div>
 
-    <!-- 
-      container for board
-      - table with 3 rows and 3 columns
-      - background image marker
-     -->
     <div class="container">
+      <section class="turn">
+        <h2 class="turnDisplay">Player 1's turn!</h2>
+      </section>
       <table class="board">
         <tbody>
           <tr class="row">
@@ -96,5 +102,7 @@
     <div class="overlay" id="endgame">
       <section class="menu"></section>
     </div>
+
+    <script src="main.js"></script>
   </body>
 </html>
