refactor code, add AI function

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="container">
       <section class="turn">
-        <h2 class="turnDisplay">Player 1's turn!</h2>
+        <h2 class="turnDisplay"></h2>
       </section>
       <table class="board">
         <tbody>
